package td1.exo1;

public interface FoodProduct extends Food, Product{
    double calories();
}
