package td1.exo1;

public interface Product {
    double weight();
    double price();
}
