package td1.exo1;

public enum SauceType {
    BURGER, BARBECUE, BEARNAISE;
}
